--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <div class="logo">amazon</div>
+            <div class="logo">Product Tester Portal</div>
         </div>
 
         <!-- Hero Section -->
